exam/01/TimesheetTracking-02/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timesheettracking-02
  namespace: timesheet02-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: timesheettracking-02
  template:
    metadata:
      labels:
        app: timesheettracking-02
    spec:
      containers:
        - name: timesheettracking
          image: timesheettracking:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /status
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /status
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
