exam/01/TimesheetTracking-02/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timesheettracking-02-svc
  namespace: timesheet02-ns
spec:
  type: ClusterIP
  selector:
    app: timesheettracking-02
  ports:
    - port: 80
      targetPort: 80
